--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,10 +1,13 @@
+/* Map */
+
 .container {
     display: flex;
     flex-direction: row;
+    max-width: 100vw;
 }
 
 .map-container {
-    width: calc(100% - 250px)
+    width: calc(100% - 300px)
 }
 
 .side-bar-container {
@@ -12,12 +15,15 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    max-width: 250px;
+    width: 300px;
+    align-content: center;
 }
 
 #map {
     height: 100vh;
 }
+
+/* Sidebar */
 
 .content {
     display: flex;
@@ -28,7 +34,7 @@
     max-width: 250px;
 }
 
-hr {
+.content hr {
     margin: 20px 0;
     border: 1px inset #c06014;
     width: 80%;
@@ -127,9 +133,7 @@ hr {
     margin: auto;
 }
 
-#map {
-    height: 100vh;
-}
+/* Scrollbar */
 
 /* width */
 ::-webkit-scrollbar {
@@ -149,4 +153,96 @@ hr {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #3B8EA5;
+}
+
+
+
+/* hamburger */
+
+.hamburger-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-left: 4px;
+}
+
+#nav-icon1 {
+    flex: 1;
+  width: 44px;
+  height: 33px;
+  position: relative;
+  margin: 25px 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+#nav-icon1 span {
+    border-radius: 5px;
+  display: block;
+  position: absolute;
+  height: 7px;
+  width: 100%;
+  background: #c06014;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#nav-icon1 span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon1 span:nth-child(2) {
+  top: 13px;
+}
+
+#nav-icon1 span:nth-child(3) {
+  top: 26px;
+}
+
+#nav-icon1.open span:nth-child(1) {
+    background: #3B8EA5;
+  top: 13px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+#nav-icon1.open span:nth-child(2) {
+  opacity: 0;
+}
+
+#nav-icon1.open span:nth-child(3) {
+    background: #3B8EA5;
+
+  top: 13px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+/* Infowindow */
+
+.img {
+    width: 200px;
 }
